--- a/src/UserInput.css
+++ b/src/UserInput.css
@@ -1,19 +1,24 @@
-.modal {
-  margin-left: 25%;
-  margin-right: 25%;
+.modalBackground {
   text-align: center;
-  height: 260px;
-  background-color: hsl(235, 46%, 20%);
-  border-radius: 15px;
-  z-index: 1;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 .closeButton {
   position: absolute;
-  top: -100px;
-  right: 20px;
+  top: 0;
+  right: 0;
   padding: 10px;
   color: #fff;
+  margin-top: 0;
 }
 
 .enterButton {
@@ -23,9 +28,25 @@
   color: #fff;
 }
 
-.modalContent {
-  position: relative;
-  bottom: -100px;
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   color: #fff;
+  width: 40%;
   font-family: "Rubik", sans-serif;
+  background-color: hsl(235, 46%, 20%);
+  border-radius: 15px;
+  margin-top: -5%;
+}
+
+.modalBody {
+  margin: 20px 0px;
+}
+
+@media only screen and (max-width: 425px) {
+  .modal {
+    width: 300px;
+  }
 }
